--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,17 @@ repositories {
     mavenCentral()
 }
 
+task fatJar(type: Jar) {
+    manifest {
+        attributes 'Implementation-Title': 'informatics.mccme.ru parser',
+                'Implementation-Version': version,
+                'Main-Class': 'Parser'
+    }
+    baseName = project.name + '-all'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile 'org.jsoup:jsoup:1.7.3'
